--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                           <tbody>
                             <tr>
                               <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
-                                <div style="font-family:Catamaran,Helvetica, sanserif;font-size:13px;line-height:1;text-align:center;color:#000000;">Copyright © 2019 Apple Inc. All rights reserved.</div>
+                                <div style="font-family:Catamaran,Helvetica, sanserif;font-size:13px;line-height:1;text-align:center;color:#000000;">Copyright © 2019 Apple Inc. All rights reserved. <br/> <br/>  <a href="#" style="text-decoration:underline; color:#000000;">Unsubscribe</a> </div>
                               </td>
                             </tr>
                           </tbody>
