--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                   <tbody>
                                     <tr>
                                       <td style="width:250px;">
-                                        <img alt="Headphone" height="auto" src="https://www.amazon.com/photos/album/wDRiFvj5RfCetAwQAQTUJA/gallery/A1HYPS794J1E0L:NuUJE115Tj6N9gaToDBJ2A?pageIndex=0" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="250" />
+                                        <img alt="Headphone" height="auto" src="https://i.postimg.cc/FKpwccgn/laptop.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="250" />
                                       </td>
                                     </tr>
                                   </tbody>
@@ -222,7 +222,7 @@
                                   <tbody>
                                     <tr>
                                       <td style="width:220px;">
-                                        <img alt="Laptop" height="150" src="https://www.amazon.com/photos/album/wDRiFvj5RfCetAwQAQTUJA/gallery/A1HYPS794J1E0L:RVsW1DSBRfqLpryrJIjjvw?pageIndex=0" style="border:0;display:block;outline:none;text-decoration:none;height:150px;width:100%;font-size:13px;" width="220" />
+                                        <img alt="Laptop" height="150" src="https://i.postimg.cc/WzFyQyRQ/laptop-globe-pic.png" style="border:0;display:block;outline:none;text-decoration:none;height:150px;width:100%;font-size:13px;" width="220" />
                                       </td>
                                     </tr>
                                   </tbody>
@@ -284,7 +284,7 @@
                                   <tbody>
                                     <tr>
                                       <td style="width:220px;">
-                                        <img alt="Laptop" height="150" src="https://www.amazon.com/photos/album/wDRiFvj5RfCetAwQAQTUJA/gallery/A1HYPS794J1E0L:DqUmBV3kQUy98ATxeOVrYA?pageIndex=0" style="border:0;display:block;outline:none;text-decoration:none;height:150px;width:100%;font-size:13px;" width="220" />
+                                        <img alt="Laptop" height="150" src="https://i.postimg.cc/L5cWRV2h/headphone.png" style="border:0;display:block;outline:none;text-decoration:none;height:150px;width:100%;font-size:13px;" width="220" />
                                       </td>
                                     </tr>
                                   </tbody>
@@ -336,7 +336,7 @@
                                   <tbody>
                                     <tr>
                                       <td style="width:220px;">
-                                        <img alt="Laptop" height="150" src="https://www.amazon.com/photos/album/wDRiFvj5RfCetAwQAQTUJA/gallery/A1HYPS794J1E0L:NyxpizMtROi6nDTEJStGtQ?pageIndex=0" style="border:0;display:block;outline:none;text-decoration:none;height:150px;width:100%;font-size:13px;" width="220" />
+                                        <img alt="Laptop" height="150" src="https://i.postimg.cc/3rkJ8J3H/apple-desktop-dark-screen.png" style="border:0;display:block;outline:none;text-decoration:none;height:150px;width:100%;font-size:13px;" width="220" />
                                       </td>
                                     </tr>
                                   </tbody>
@@ -398,7 +398,7 @@
                                   <tbody>
                                     <tr>
                                       <td style="width:220px;">
-                                        <img alt="Laptop" height="150" src="https://www.amazon.com/photos/album/wDRiFvj5RfCetAwQAQTUJA/gallery/A1HYPS794J1E0L:xkQo7caWTJKfrBcWA4xkoA?pageIndex=0" style="border:0;display:block;outline:none;text-decoration:none;height:150px;width:100%;font-size:13px;" width="220" />
+                                        <img alt="Laptop" height="150" src="https://i.postimg.cc/V6HTZ8hq/apple-desktop.png" style="border:0;display:block;outline:none;text-decoration:none;height:150px;width:100%;font-size:13px;" width="220" />
                                       </td>
                                     </tr>
                                   </tbody>
@@ -450,7 +450,7 @@
                                   <tbody>
                                     <tr>
                                       <td style="width:230px;">
-                                        <img alt="" height="200" src="https://www.amazon.com/photos/album/wDRiFvj5RfCetAwQAQTUJA/gallery/A1HYPS794J1E0L:6e47btMbR42gFAHNYNt1YA?pageIndex=0" style="border:0;display:block;outline:none;text-decoration:none;height:200px;width:100%;font-size:13px;" width="230" />
+                                        <img alt="" height="200" src="https://i.postimg.cc/mDrJSDmZ/large-screen-tablet.png" style="border:0;display:block;outline:none;text-decoration:none;height:200px;width:100%;font-size:13px;" width="230" />
                                       </td>
                                     </tr>
                                   </tbody>
