--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                   <tbody>
                                     <tr>
                                       <td style="width:250px;">
-                                        <img alt="Headphone" height="auto" src="https://i.postimg.cc/FKpwccgn/laptop.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="250" />
+                                        <img alt="Headphone" height="auto" src="https://i.postimg.cc/L5cWRV2h/headphone.png " style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="250" />
                                       </td>
                                     </tr>
                                   </tbody>
@@ -284,7 +284,7 @@
                                   <tbody>
                                     <tr>
                                       <td style="width:220px;">
-                                        <img alt="Laptop" height="150" src="https://i.postimg.cc/L5cWRV2h/headphone.png" style="border:0;display:block;outline:none;text-decoration:none;height:150px;width:100%;font-size:13px;" width="220" />
+                                        <img alt="Laptop" height="150" src="https://i.postimg.cc/FKpwccgn/laptop.png" style="border:0;display:block;outline:none;text-decoration:none;height:150px;width:100%;font-size:13px;" width="220" />
                                       </td>
                                     </tr>
                                   </tbody>
